@@ -363,6 +363,7 @@ $PMA_SQPdata_column_attrib = array (
     'INNOBASE',         // Engine alias InnoDB
     'INNODB',           // Engine InnoDB
     'ISAM',             // Engine
+    'MARIA',            // Engine
     'MEMORY',           // Engine alias HEAP, but preferred
     'MERGE',            // Engine
     'MRG_ISAM',         // Engine
@@ -383,7 +384,7 @@ $PMA_SQPdata_column_attrib = array (
  *
  * @global integer MySQL attributes count
  */
-$PMA_SQPdata_column_attrib_cnt = 29;
+$PMA_SQPdata_column_attrib_cnt = 30;
 
 /**
  * words that are reserved by MySQL and may not be used as identifiers without quotes
@@ -529,6 +530,7 @@ $PMA_SQPdata_reserved_word = array (
     'LOCKS',
     'LOGS',
     'LOW_PRIORITY',
+    'MARIA',                // 5.1 ?
     'MASTER',
     'MASTER_CONNECT_RETRY',
     'MASTER_HOST',
@@ -682,7 +684,7 @@ $PMA_SQPdata_reserved_word = array (
  *
  * @global integer MySQL reserved words count
  */
-$PMA_SQPdata_reserved_word_cnt = 281;
+$PMA_SQPdata_reserved_word_cnt = 282;
 /**
  * The previous array must be sorted so that the binary search work. 
  * Sometimes a word is not added in the correct order, so
